# temporal-conductor-review-approval

./: AGENTS.md  CONDUCTOR_TO_TEMPORAL.md  README.md  conductor-architecture.md  conductor-migration-guide.md  conductor-quality-assurance.md  conductor-troubleshooting.md  pyproject.toml
conductor-migration/: README.md  conductor-architecture.md  conductor-human-interaction.md  conductor-migration-guide.md  conductor-primitives-reference.md  conductor-quality-assurance.md  conductor-troubleshooting.md
schema_approval/: __init__.py  activities.py  shared.py  starter.py  worker.py  workflow.py
tests/: test_activities.py  test_workflow.py
