[project]
name = "schema-approval"
version = "0.1.0"
description = "Temporal translation of the Conductor review_approval workflow"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "temporalio>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
