[project]
name = "schema-approval"
version = "0.1.0"
description = "Temporal translation of the Conductor schema approval workflow"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "temporalio>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
